// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle default exported es module values 1`] = `
"declare var test: {
  a: number,
  ...
};
declare export default typeof test;
"
`;

exports[`should handle exported es module values 1`] = `
"declare var test: {
  a: number,
  ...
};
declare export { test };
"
`;
